@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-19T00:57:22Z",
+  "timestamp" : "2022-07-19T16:16:07Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 441,
-  "uniques" : 36,
+  "count" : 442,
+  "uniques" : 37,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
