@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 2,
   "views": [
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
