@@ -1,3 +1,10 @@
+2022-07-19T16:16:07Z:
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 31 427 / 36 441
+* notice: next accum: outdated-unq outdated-all / unq all: 31 427 / 37 442
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-19]
+
 2022-07-19T00:57:22Z:
 * notice: last 14d: unq all: 2 14
 * notice: prev accum: outdated-unq outdated-all / unq all: 31 427 / 36 440
